--- a/_posts/2020-04-04-D33p-CTF.md
+++ b/_posts/2020-04-04-D33p-CTF.md
@@ -155,6 +155,5 @@ I will show you the final png
 
 That's it for forensics, do comment if you want any other writups
 
-<center><b>Go Corona ,Corona Go</b> </center>
-
-**Stay Safe**
+<center><b>Go Corona ,Corona Go</b> </center><br>
+<center><b>Stay Safe</b> </center>
