--- a/_posts/2020-05-06-zh3r0-ctf.md
+++ b/_posts/2020-05-06-zh3r0-ctf.md
@@ -5,7 +5,7 @@ title: zh3r0 Ctf Writups
 description: "Some awesome challs solved by me"
 date: 2020-05-06
 feature_image: images/zh3r0_ctf/front.png
-tags: [Pwn-A-Day]
+tags: [CTF, Forensics, Web]
 published: true
 
 ---
